Fix input on IOS, imporove mobile view

--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -48,8 +48,13 @@ button {
     border-radius: 0.2857rem;
 }
 
-input {
+input,
+select {
     outline: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    font-size: 16px;
 }
 
 button {
@@ -67,18 +72,38 @@ label {
     padding-top: 5px;
 }
 
-.header {
+.header-info {
     margin-bottom: 20px;
     width: 100%;
 }
 
 .info {
     color: #ffffff94;
-    text-align: left;
+    text-align: center;
     margin-bottom: 20px;
+    padding: 0px 20px;
 }
 
 .info-columns {
     /* font-style: italic; */
     color: #9b9be8;
+}
+
+
+/* make form full width on mobile screens */
+
+@media screen and (max-width: 600px) {
+    form {
+        background-color: #27293d;
+        width: 100%;
+        max-width: 100%;
+        margin: 0px;
+        padding: 30px 0px;
+    }
+    .form-group {
+        margin: 30px 0px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
